Add Intel Workload Intelligence Monitor with Predictive Offloading
This update introduces a comprehensive research system that combines VLM inference
with real-time hardware monitoring and predictive offloading capabilities.

Key Features:
- Real-time hardware monitoring (CPU/GPU/NPU utilization, memory, temperature, power)
- Vision Language Model integration with Intel RealSense D455 camera
- Predictive workload forecasting using conformal prediction
- Uncertainty quantification with statistical guarantees
- Intelligent edge-to-cloud offloading decisions with confidence intervals
- Research-grade demonstration of advanced AI workload management

New Components:
- vlm_env_description/intel_workload_monitor.py - Main workload intelligence system
- vlm_env_description/launch_workload_monitor.sh - Automated launcher with dependency checks
- vlm_env_description/RESEARCH_OVERVIEW.md - Comprehensive research documentation
- test_hardware_utilization.py - Hardware monitoring utility for analysis
- .gitignore - Exclude large model files and temporary data

Technical Implementation:
- Conformal prediction for time-series forecasting with 90% confidence intervals
- Sliding window approach for historical data analysis (60-second window)
- Multi-threaded processing for real-time performance
- Statistical guarantees for workload prediction accuracy
- Temperature-aware and power-conscious offload decisions

Research Contributions:
- Proactive vs reactive resource management
- Uncertainty quantification in edge computing
- Real-time demonstration of intelligent workload distribution
- Integration of multiple Intel hardware accelerators (CPU/GPU/NPU)
- Practical application of conformal prediction in systems research

Updated Documentation:
- Enhanced README with research contributions section
- Detailed technical documentation and mathematical foundations
- Performance benchmarks and evaluation metrics
- Future research directions and academic impact potential

This system demonst

--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,48 @@
-# Ollama models and binaries
-frameworks/ollama-ipex-llm-*/
-*.tgz
-*.tar.gz
-*.so
-*.so.*
-ollama-bin
-ollama-lib
+# Model files
+*.pt
+*.pth
+*.onnx
+*.pb
+*.h5
+*.tflite
+*.bin
+*.safetensors
 
-# Cloned repositories
-frameworks/ipex-llm/ipex-llm/
+# Large data files
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.jpg
+*.png
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.webp
+*.raw
 
-# Benchmark results (can be large)
-benchmarks/results/*.json
-
-# Logs
-*.log
-/tmp/
-
-# System files
-.DS_Store
-*.swp
-*.swo
-*~
-
-# Python
+# Python cache
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
+*.class
 
-# IDE
-.vscode/
-.idea/
-*.iml
+# Log files
+*.log
+*.out
+*.err
 
 # Temporary files
 *.tmp
+*.temp
 *.bak
-*.cache
+*.backup
 
-# Docker
-.docker/
+# Hardware monitoring results
+hardware_monitoring_results.json
+benchmark_results_*.json
 
-# Models directory (if models are stored here)
-models/**/*.bin
-models/**/*.gguf
-models/**/*.safetensors
+# Snapshots
+*_snapshot_*.jpg
+*_descriptions_*.txt
+*_descriptions_*.json
