--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Large framework files and directories
+frameworks/ipex-llm/ipex-llm/
+frameworks/ollama-ipex-llm-*/
+*.tgz
+*.tar.gz
+*.zip
+
 # Model files
 *.pt
 *.pth
@@ -25,7 +32,50 @@
 # Python cache
 __pycache__/
 *.py[cod]
-*.class
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Log files
 *.log
@@ -46,3 +96,6 @@ benchmark_results_*.json
 *_snapshot_*.jpg
 *_descriptions_*.txt
 *_descriptions_*.json
+
+# NPU models directory (large)
+npu_models/
