Add comprehensive performance benchmarks and LLM response demo
Performance Results:
- Add token generation benchmarks showing 84.4 tokens/sec for TinyLlama
- Include model portfolio analysis with memory requirements
- Add real-time LLM response demo GIF showing Llama 3.2 at 26 tokens/sec
- Include Open WebUI interface screenshot demonstrating VLM capabilities

Technical Achievements:
- Document 5.1x speed advantage over baseline implementations
- Show <30ms first token latency for real-time applications
- Detail performance across 6 models (1.1B to 7B parameters)
- Provide comparative analysis of model capabilities

Optimizations Documented:
- Intel Extension for PyTorch (IPEX) integration
- Environment variables for optimal GPU performance
- Memory management strategies for large models
- Production deployment recommendations

The README now showcases complete performance validation of the Intel AI platform
with real benchmarks, live demos, and technical optimization details.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ frameworks/ollama-ipex-llm-*/
 *.mov
 *.mkv
 *.jpg
-*.png
+# *.png  # Commented out to allow documentation images
 *.jpeg
 # *.gif  # Commented out to allow demo GIFs
 *.bmp
